--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -7,6 +7,9 @@ on:
     types: [ created ]
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     name: Convert Markdown to PDF, EPUB & HTML
