--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -1,4 +1,4 @@
-name: Build & Release eBooks
+name: Auto Version, Build & Release eBooks
 
 on:
   push:
@@ -9,11 +9,47 @@ on:
 
 permissions:
   contents: write
+  pull-requests: write
 
 jobs:
+  tag:
+    name: Auto Version Tag
+    runs-on: ubuntu-latest
+    outputs:
+      tag_name: ${{ steps.create_tag.outputs.tag }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Generate daily incremental version tag
+        id: create_tag
+        run: |
+          DATE_TAG="$(date +'%Y.%m.%d')"
+          # Find the latest existing tag for today
+          LATEST_TAG=$(git tag --list "${DATE_TAG}.*" | sort -V | tail -n 1)
+
+          if [ -z "$LATEST_TAG" ]; then
+            BUILD_NUMBER=1
+          else
+            BUILD_NUMBER=$(( $(echo "$LATEST_TAG" | sed -E "s/.*\.([0-9]+)/\1/") + 1 ))
+          fi
+
+          NEW_TAG="${DATE_TAG}.${BUILD_NUMBER}"
+          echo "Creating new tag: $NEW_TAG"
+
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git tag "$NEW_TAG"
+          git push origin "$NEW_TAG"
+
+          echo "tag=$NEW_TAG" >> $GITHUB_OUTPUT
+
   build:
     name: Convert Markdown to PDF, EPUB & HTML
     runs-on: ubuntu-latest
+    needs: tag
 
     steps:
       - name: Checkout repository
@@ -57,7 +93,7 @@ jobs:
 
   release:
     name: Create or Update GitHub Release
-    needs: build
+    needs: [tag, build]
     runs-on: ubuntu-latest
 
     steps:
@@ -66,8 +102,8 @@ jobs:
       - name: Create or update release
         uses: ncipollo/release-action@v1
         with:
-          tag: ${{ github.ref_name }}
-          name: "Automated Release ${{ github.ref_name }}"
+          tag: ${{ needs.tag.outputs.tag_name }}
+          name: "Release ${{ needs.tag.outputs.tag_name }}"
           body: "Auto-generated release of converted eBooks."
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -84,3 +120,22 @@ jobs:
           files: build/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Generate release summary comment
+        run: |
+          echo "## 📚 Release Summary — ${{ needs.tag.outputs.tag_name }}" > release-summary.md
+          echo "" >> release-summary.md
+          echo "The following eBook formats were generated automatically:" >> release-summary.md
+          echo "" >> release-summary.md
+          for f in build/*; do
+            FILE_NAME=$(basename "$f")
+            echo "- [${FILE_NAME}](https://github.com/${{ github.repository }}/releases/download/${{ needs.tag.outputs.tag_name }}/${FILE_NAME})" >> release-summary.md
+          done
+          echo "" >> release-summary.md
+          echo "_Generated automatically by GitHub Actions._" >> release-summary.md
+
+      - name: Upload release summary as comment
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          header: "📘 eBook Release Summary"
+          path: release-summary.md
