--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
     paths:
-      - '.github/workflows/build-and-release.yml'
+      - '.github/workflows/build-and-release.yaml'
       - 'src/**'
   workflow_dispatch:
 
